<resources>
    <string name="app_name">Swoop</string>
    <string name="create_carpool_name">Create Carpool</string>

    <!--Create Carpool Layout-->
    <string name="hint_location">123 Street, Salinas CA</string>
    <string name="hint_destination">345 Street, Salinas CA</string>
    <string name="hint_date">2/3/2015</string>
    <string name="hint_rate">14.5</string>
    <string name="hint_max_people">6</string>

    <string name="text_input_location">Location: </string>
    <string name="text_input_destination">Destination: </string>
    <string name="text_input_date">Date: </string>
    <string name="text_input_rate">Rate: </string>
    <string name="text_input_max_people">Max people: </string>
    <string name="text_input_user">User: </string>

    <string name="submit_button">Create Carpool</string>
    <string name="driver_radio_button">Driver </string>q
    <string name="passanger_radio_button">Passanger</string>


    <!--Drawer Layout-->
    <string name="text_edit_profile">Edit Profile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Drawer List-->
    <string name="drawer_title_0">Home</string>
    <string name="drawer_title_1">Notification</string>
    <string name="drawer_title_2">Bank Account</string>
    <string name="drawer_title_3">Add Vehicle</string>
    <string name="drawer_title_4">Settings</string>

    <string name="drawer_description_0">Main page</string>
    <string name="drawer_description_1">View notifications</string>
    <string name="drawer_description_2">Edit bank information</string>
    <string name="drawer_description_3">Edit information</string>
    <string name="drawer_description_4">Log out of Swoop</string>
    <string name="title_activity_carpool_detail_page">Map</string>


    <!--HomeFragment-->
    <string name="main_title_0">Swoops</string>
    <string name="main_title_1">My Swoops</string>
    <string name="requested">Requests</string>
    <string name="create">Create</string>


    <!--Facebook Login-->
    <string name="facebook_app_id">1709568252703055</string>
    <string name="title_activity_create_user">CreateUserActivity</string>

    <string name="hint_userName">john</string>
    <string name="hint_userLastName">smith</string>
    <string name="hint_userEmail">jsmith@gmail.com</string>
    <string name="hint_cellPhone">831-888-8888</string>
    <string name="hint_DOB">01/10/1994</string>
    <string name="hint_homeAddress">123 Bluff Ave city state zipcode</string>

    <!--create user-->
    <string name="text_user_name">firstName</string>
    <string name="text_user_last_name">lastName</string>
    <string name="text_user_email">email</string>
    <string name="text_user_cellphone">cellPhone</string>
    <string name="text_user_date_of_birth">dateOfBirth</string>
    <string name="text_user_home_address">homeAddress</string>
    <string name="submit_button_to_create_user">sign up</string>


</resources>
