<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_carpool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swoop.swoop.CreateCarpoolActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_to_create_user"
        android:layout_marginBottom="28dp"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/submit_button_to_create_user"
        android:background="@drawable/rounded_corners"
        />

    <!--One outer main liner layout that contains both the text and input linear layout-->
    <LinearLayout
        android:id="@+id/outer_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <!--Two inner liner layout: 1st for text descriptions-->
        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_user_name"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name:"
                android:textSize="10pt"
                android:paddingTop="7pt"/>

            <TextView
                android:id="@+id/text_user_last_name"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name:"
                android:textSize="10pt"
                android:paddingTop="7pt"/>

            <TextView
                android:id="@+id/text_user_email"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textSize="10pt"
                android:paddingTop="7pt"/>

            <TextView
                android:id="@+id/text_user_cellphone"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cellphone:"
                android:textSize="10pt"
                android:paddingTop="7pt"/>

            <TextView
                android:id="@+id/text_user_date_of_birth"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="date of birth:"
                android:textSize="10pt"
                android:paddingTop="7pt"/>

            <TextView
                android:id="@+id/text_user_home_address"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="home address:"
                android:textSize="10pt"
                android:paddingTop="7pt"/>

        </LinearLayout>

        <!--Two inner liner layout: 2st for text input-->
        <LinearLayout
            android:id="@+id/input_linear_layout"
            android:paddingLeft="10pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">


            <EditText android:id="@+id/input_userName"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_userName" />

            <EditText android:id="@+id/input_userLastName"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_userLastName" />

            <EditText android:id="@+id/input_userEmail"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_userEmail"/>

            <EditText android:id="@+id/input_cellPhone"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cellPhone"/>

            <EditText android:id="@+id/input_DOB"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_DOB"/>

            <EditText android:id="@+id/input_homeAddress"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_homeAddress"/>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
