<!-- Fragment layout -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swoop.swoop.HomeFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <!-- Button Layout -->
        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <Button
                android:id="@+id/hamburger_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_hamburger" />

            <Button
                android:id="@+id/swoop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_swoops"
                android:text="@string/main_title_0"
                android:textColor="@android:color/white"
                android:textSize="4pt" />

            <Button
                android:id="@+id/my_swoops_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_my_swoops"
                android:text="@string/main_title_1"
                android:textColor="@android:color/white"
                android:textSize="4pt" />

            <Button
                android:id="@+id/requested_swoops_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_requested"
                android:text="@string/requested"
                android:textColor="@android:color/white"
                android:textSize="4pt" />

            <Button
                android:id="@+id/create_swoop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_create"
                android:text="@string/create"
                android:textColor="@android:color/white"
                android:textSize="4pt" />

        </LinearLayout>

        <!-- The fragment content view -->

        <RelativeLayout
            android:id="@+id/home_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/button_layout">


        </RelativeLayout>

    </RelativeLayout>


</FrameLayout>